# smsg

./: .clang-tidy  CMakeLists.txt  Dockerfile
app/: config.json
app/ssl/: cert.pem
app/static/html/: index.html  messenger.html
src/: main.cpp  util.cpp  util.h
src/tests/: test.cpp
ssl/: key.pem
